PMD related changes
SVN-Revision: 17652